# htmx

./: Shuttle.toml
migrations/: 20231018144859_init.up.sql
my_rust_server/: Cargo.toml  contacts.json
my_rust_server/migrations/: init.up.sql
my_rust_server/src/: contact.rs  main.rs
my_rust_server/static/: index.html
my_rust_server/templates/: base.html  contacts.html  index.html  layout.html  new.html  todo.html  todos.html
src/: main.rs
templates/: stream.html
