[package]
name = "my_rust_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
tokio = { version = "1.35.0", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_qs = "0.12.0"
tera = "1.19.1"
serde_json = "1.0.108"
shuttle-runtime = "0.35.1"
shuttle-axum = { version = "0.35.1", default-features = false, features = ["axum-0-7"] }
shuttle-shared-db = { version = "0.35.1", features = ["postgres"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tower = "0.4.13"
tower-http = { version = "0.5", features = ["full"] }